# AI-Boilerplate

./: README.md  pyproject.toml
src/: pyproject.toml
src/ai_boilerplate/: __init__.py
utils/: loggingService.py
