[project]
name = "ai-boilerplate"
version = "0.1.0"
description = "An AI Boilerplate"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.2",
    "requests>=2.32.3",
    "fastapi>=0.115.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["src"]
